--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "relay-config": "^12.0.1",
     "typescript": "^4.5.5",
     "vite": "^2.7.2",
-    "vite-plugin-relay": "../"
+    "vite-plugin-relay": "^1.0.7"
   }
 }
