--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-relay": "^13.0.2",
-    "relay-runtime": "^13.0.2"
+    "rebass": "^4.0.7",
+    "relay-runtime": "^13.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-relay": "^13.0.1",
+    "@types/rebass": "^4.0.10",
     "@types/relay-config": "^6.0.2",
     "@types/relay-runtime": "^13.0.1",
     "@vitejs/plugin-react": "^1.0.7",
